change status Api
